# MixedMediaPlayer

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  Makefile
Source/format/base/: chunk_parser.cpp  chunk_parser.h
Source/format/mp4/: mp4_atom.h  mp4_chunk_parser.h
Source/log/: logger.cpp  logger.h
Source/macro/: macro.h
